created new task file

--- a/Styles/Admin/contactus.css
+++ b/Styles/Admin/contactus.css
@@ -1,6 +1,6 @@
 @import url("../../Global/global.css");
 @import url("../../Global/reset.css");
-@import url("../../Global/fonts.css");
+@import url("../../Global/font.css");
 @import url("../../Global/variable.css");
 @import url("../Responsive/Admin/contactus-responsive.css");
 @import url("../../Global/bootstrap.css");
