--- a/Styles/Client/details.css
+++ b/Styles/Client/details.css
@@ -6,7 +6,8 @@
 .left {
     display: flex;
     position: fixed;
-    z-index: 3;
+    z-index: 13;
+    top: 0;
     left: 0;
     flex-direction: column;
     align-items: center;
@@ -110,6 +111,7 @@ main {
 .container {
     max-width: 1440px;
     margin: 0 auto;
+    padding-left: 60px;
 }
 
 
@@ -229,7 +231,7 @@ main {
 .film-overlay {
     display: none;
     position: fixed;
-    z-index: 4;
+    z-index: 15;
     top: 0;
     left: 0;
     right: 0;
@@ -243,7 +245,7 @@ main {
     position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 5;
+    z-index: 16;
     user-select: none;
     animation: filmModal 0.5s ease forwards;
     -webkit-animation: filmModal 0.5s ease forwards;
