--- a/Styles/Client/landing-page.css
+++ b/Styles/Client/landing-page.css
@@ -155,6 +155,9 @@ input:focus {
 }
 
 .started-btn {
+  display: flex;
+  align-items: center;
+  gap: 16px;
   background-color: var(--Btn-color);
   font-family: var(--Font_Roboto);
   font-size: 24px;
@@ -274,7 +277,11 @@ h6 {
 }
 
 textarea {
+  padding: 10px;
+  padding-left: 17px;
   height: 122px;
+  resize: none;
+  scrollbar-width: none;
 }
 
 .send-btn {
