--- a/Styles/Client/home.css
+++ b/Styles/Client/home.css
@@ -2,7 +2,6 @@
 @import url("../../Global/reset.css");
 @import url("../../Global/font.css");
 @import url("../../Global/variable.css");
-@import url("../Responsive/Client/home-responsive.css");
 
 body {
   display: flex;
@@ -118,24 +117,6 @@ body {
   color: var(--Link-hover-color);
 }
 
-.rating {
-  margin: 16px 0px 16px 0px;
-  font-family: var(--Font_Roboto);
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 16px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-
-  width: 13.33px;
-  height: 12.67px;
-  top: 1.33px;
-  left: 1.33px;
-  gap: 0px;
-  border: 1.5px 0px 0px 0px;
-  opacity: 0px;
-}
 
 h1 {
   font-family: var(--Font_Roboto);
@@ -181,12 +162,10 @@ p {
   bottom: 0;
   border-radius: 40px;
   padding: 2px;
-  background: linear-gradient(
-    135.87deg,
-    #0feffd 1.25%,
-    #ff00f5 51.73%,
-    rgba(15, 239, 253, 0.22) 77.22%
-  );
+  background: linear-gradient(135.87deg,
+      #0feffd 1.25%,
+      #ff00f5 51.73%,
+      rgba(15, 239, 253, 0.22) 77.22%);
   -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: destination-out;
   mask-composite: exclude;
@@ -194,11 +173,9 @@ p {
 }
 
 .watch-btn:hover {
-  background: linear-gradient(
-    135.87deg,
-    rgba(15, 239, 253, 0.1),
-    rgba(255, 0, 245, 0.1)
-  );
+  background: linear-gradient(135.87deg,
+      rgba(15, 239, 253, 0.1),
+      rgba(255, 0, 245, 0.1));
   color: #0feffd;
 }
 
@@ -368,110 +345,6 @@ p {
   padding-top: 12px;
 }
 
-.section-container {
-  color: white;
-}
-
-.section-header {
-  display: flex;
-  margin: 60px 0px 26px 56px;
-  align-items: center;
-  color: #ffffff;
-  font-family: var(--Font_Roboto);
-}
-
-.section-title {
-  font-size: 35px;
-  font-weight: 500;
-  margin: 0;
-  margin-left: 55px;
-}
-
-.direction-icon {
-  margin-left: 20px;
-  width: 12px;
-  height: 12px;
-  border-right: 3.5px solid #ffffff;
-  border-top: 3.5px solid #ffffff;
-  transform: rotate(45deg);
-}
-
-.content-container {
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 56px;
-}
-
-.content-card {
-  background: #1d1d1d;
-  overflow: hidden;
-  width: 504px;
-  height: 736px;
-  position: relative;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  display: flex;
-  flex-direction: column;
-}
-
-.content-card:hover {
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.5);
-}
-
-.content-card:hover .content-image {
-  opacity: 0.5;
-  transition: opacity 0.3s ease;
-  cursor: pointer;
-}
-
-.content-card:hover .content-info {
-  transform: translateY(-20%);
-  transition: transform 0.3s ease;
-  cursor: pointer;
-}
-
-.content-image {
-  opacity: 0.8;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: opacity 0.3s ease;
-}
-
-.content-info {
-  padding: 24px;
-  text-align: left;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  transition: transform 0.3s ease;
-}
-
-.content-category {
-  display: inline-block;
-  background: #1d1d1d80;
-  padding: 4px 8px;
-  border-radius: 0px 8px 0px 8px;
-  color: var(--Link-hover-color);
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.content-title {
-  margin: 0;
-  color: white;
-
-  font-family: var(--Font_Roboto);
-  font-size: 32px;
-  font-weight: 500;
-  line-height: 40px;
-  text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
-
-  padding-top: 16px;
-}
-
 .star {
   color: #ccc;
   font-size: 18px;
@@ -489,21 +362,4 @@ p {
   background: linear-gradient(90deg, gold 50%, #ccc 50%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.dot {
-  width: 15px;
-  height: 15px;
-  margin: 0 5px;
-  background-color: rgba(255, 255, 255, 0.5);
-  border: none;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.3s ease, transform 0.3s ease;
-  cursor: pointer;
-}
-
-.dot.active {
-  background-color: rgba(255, 255, 255, 1);
-  transform: scale(1.2);
 }
