--- a/Styles/Responsive/Client/home-responsive.css
+++ b/Styles/Responsive/Client/home-responsive.css
@@ -1,1 +1,335 @@
 /* Responsive styles for Home */
+
+@media only screen and (max-width:1200px) {
+
+    /* ? Navbar */
+    .left {
+        width: 54px;
+    }
+
+    .logo-div {
+        margin-bottom: 60px;
+    }
+
+    .icon {
+        margin-bottom: 60px;
+    }
+
+    .icon img {
+        width: 30px;
+        height: 30px;
+    }
+
+    /* ? Navbar */
+
+
+    .right {
+        padding-bottom: 90px;
+    }
+
+    .carousel-container {
+        height: 630px;
+    }
+
+    .text-overlay {
+        margin-left: 160px;
+        max-width: 600px;
+    }
+
+    h1 {
+        font-size: 40px;
+        line-height: 40px;
+        margin-bottom: 14px;
+    }
+
+    p {
+        font-size: 14px;
+        line-height: 1.3;
+        margin-bottom: 14px;
+    }
+
+    .watch-btn {
+        width: 180px;
+        height: 52px;
+        font-size: 14px;
+    }
+
+    .carousel-buttons {
+        bottom: 18px;
+        gap: 8px;
+    }
+
+    .carousel-buttons button {
+        width: 10px;
+        height: 10px;
+    }
+
+    .category-section {
+        padding-left: 54px;
+    }
+
+    .category-card {
+        gap: 14px;
+    }
+
+    .movie-card {
+        width: 280px;
+        height: 400px;
+    }
+
+    .category-header {
+        margin: 24px 0px 14px 46px;
+    }
+
+    .category-P {
+        font-size: 20px;
+        line-height: 28px;
+    }
+
+    .chevron-icon {
+        margin-left: 12px;
+        width: 10px;
+        height: 10px;
+    }
+
+    .movie-details {
+        padding: 22px;
+    }
+
+    .movie-category {
+        font-size: 13px;
+    }
+
+    .movie-title {
+        font-size: 20px;
+        line-height: 28px;
+        padding-top: 10px;
+    }
+
+    .star {
+        font-size: 16px;
+        padding-top: 10px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+
+    /* ? Navbar */
+    .left {
+        width: 40px;
+    }
+
+    .logo-div {
+        margin-bottom: 40px;
+    }
+
+    .logo-div img {
+        width: 35px;
+    }
+
+    .icon {
+        margin-bottom: 40px;
+    }
+
+    .icon img {
+        width: 20px;
+        height: 20px;
+    }
+
+    /* ? Navbar */
+
+
+    .right {
+        padding-bottom: 80px;
+    }
+
+    .carousel-container {
+        height: 550px;
+    }
+
+    .text-overlay {
+        margin-left: 130px;
+        max-width: 550px;
+    }
+
+    h1 {
+        font-size: 24px;
+        line-height: 25px;
+        margin-bottom: 14px;
+    }
+
+    p {
+        font-size: 12px;
+        line-height: 1.1;
+        margin-bottom: 12px;
+    }
+
+    .watch-btn {
+        width: 120px;
+        height: 30px;
+        font-size: 10px;
+    }
+
+    .carousel-buttons {
+        bottom: 14px;
+        gap: 6px;
+    }
+
+    .category-section {
+        padding-left: 35px;
+    }
+
+    .category-card {
+        gap: 10px;
+    }
+
+    .movie-card {
+        width: 200px;
+        height: 300px;
+    }
+
+    .category-header {
+        margin: 20px 0px 10px 30px;
+    }
+
+    .category-P {
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .chevron-icon {
+        margin-left: 10px;
+        width: 8px;
+        height: 8px;
+    }
+
+    .movie-details {
+        padding: 15px;
+    }
+
+    .movie-category {
+        font-size: 10px;
+    }
+
+    .movie-title {
+        font-size: 14px;
+        line-height: 22px;
+        padding-top: 8px;
+    }
+
+    .star {
+        font-size: 12px;
+        padding-top: 8px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+
+    /* ? Navbar */
+    .left {
+        width: 40px;
+    }
+
+    .logo-div {
+        margin-bottom: 40px;
+    }
+
+    .logo-div img {
+        width: 35px;
+    }
+
+    .icon {
+        margin-bottom: 40px;
+    }
+
+    .icon img {
+        width: 20px;
+        height: 20px;
+    }
+
+    /* ? Navbar */
+
+
+    .right {
+        padding-bottom: 80px;
+    }
+
+    .carousel-container {
+        height: 550px;
+    }
+
+    .text-overlay {
+        margin-left: 130px;
+        max-width: 550px;
+    }
+
+    h1 {
+        font-size: 24px;
+        line-height: 25px;
+        margin-bottom: 14px;
+    }
+
+    p {
+        font-size: 12px;
+        line-height: 1.1;
+        margin-bottom: 12px;
+    }
+
+    .watch-btn {
+        width: 120px;
+        height: 30px;
+        font-size: 10px;
+    }
+
+    .carousel-buttons {
+        bottom: 14px;
+        gap: 6px;
+    }
+
+    .category-section {
+        padding-left: 35px;
+    }
+
+    .category-card {
+        gap: 10px;
+    }
+
+    .movie-card {
+        width: 200px;
+        height: 300px;
+    }
+
+    .category-header {
+        margin: 20px 0px 10px 30px;
+    }
+
+    .category-P {
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .chevron-icon {
+        margin-left: 10px;
+        width: 8px;
+        height: 8px;
+    }
+
+    .movie-details {
+        padding: 15px;
+    }
+
+    .movie-category {
+        font-size: 10px;
+    }
+
+    .movie-title {
+        font-size: 14px;
+        line-height: 22px;
+        padding-top: 8px;
+    }
+
+    .star {
+        font-size: 12px;
+        padding-top: 8px;
+    }
+}
