--- a/Styles/Responsive/Client/landing-page-responsive.css
+++ b/Styles/Responsive/Client/landing-page-responsive.css
@@ -446,7 +446,7 @@
 
     /* ? Header */
     .header {
-        padding: 12px 20px;
+        padding: 12px 30px;
     }
 
     .header-logo {
@@ -540,8 +540,6 @@
     .loading-tv-main,
     .loading-tv-main-2 {
         height: 40vh;
-        margin: 0;
-        background-color: #000;
     }
 
     .loading-tv-frame,
@@ -646,16 +644,17 @@
 
     /* ? User */
     .user-img {
-        width: 18px;
-        height: 18px;
+        width: 22px;
+        height: 22px;
     }
 
     .user-p {
-        font-size: 8px;
+        font-size: 12px;
     }
 
     .user-modal {
-        width: 80px;
+        width: 60px;
+        left: 30%;
     }
 
     .user-modal li {
