--- a/Styles/Responsive/Client/login-responsive.css
+++ b/Styles/Responsive/Client/login-responsive.css
@@ -1,1 +1,134 @@
-/* Responsive styles for Login */
+/* ? Responsive styles for Login */
+@media only screen and (max-width:1200px) {
+
+    /* ? right part */
+    .right-part {
+        margin: 40px 0 80px 0;
+
+    }
+
+    h1 {
+        font-size: 40px;
+        margin-top: 13px;
+        line-height: 60px;
+    }
+
+    h2 {
+        font-size: 22px;
+        line-height: 40px;
+    }
+
+    .form-group {
+        width: 500px;
+        margin-bottom: 14px;
+    }
+
+    .form-group img {
+        margin: 14px 10px;
+    }
+
+    .form-group input {
+        font-size: 14px;
+    }
+
+    .login-btn {
+        padding: 14px 26px;
+        font-size: 14px;
+        line-height: 20px;
+        margin-top: 20px;
+    }
+
+    /* ? right part */
+
+
+    /* ? Pop-up */
+    .popup {
+        gap: 18px;
+        width: 360px;
+        height: 180px;
+    }
+
+    .popup p {
+        margin: 18px 0;
+        font-size: 16px;
+    }
+
+    .close-btn {
+        padding: 8px 16px;
+        font-size: 14px;
+    }
+
+    /* ? Pop-up */
+
+}
+
+@media only screen and (max-width:576px) {
+
+    /* ? right part */
+    .right-part {
+        margin: 20px 0 60px 0;
+
+    }
+
+    .login-logo {
+        width: 130px;
+    }
+
+    h1 {
+        font-size: 30px;
+        margin-top: 10px;
+        line-height: 40px;
+    }
+
+    h2 {
+        font-size: 16px;
+    }
+
+    .form-group {
+        width: 300px;
+        margin-bottom: 10px;
+    }
+
+    .form-group img {
+        margin: 10px 6px;
+    }
+
+    .form-group input {
+        font-size: 10px;
+    }
+
+    .login-btn {
+        padding: 8px 15px;
+        font-size: 14px;
+        line-height: 16px;
+        margin-top: 14px;
+    }
+
+    a {
+        font-size: 10px;
+    }
+
+    /* ? right part */
+
+
+    /* ? Pop-up */
+    .popup {
+        gap: 8px;
+        width: 250px;
+        height: 140px;
+        padding-inline: 20px;
+    }
+
+    .popup p {
+        margin: 16px 0;
+        font-size: 12px;
+    }
+
+    .close-btn {
+        padding: 5px 12px;
+        font-size: 12px;
+    }
+
+    /* ? Pop-up */
+
+}
