--- a/Styles/Client/details.css
+++ b/Styles/Client/details.css
@@ -220,7 +220,6 @@ main {
   -o-border-radius: 25px;
 }
 
-/* ? MODAL */
 .film-overlay {
   display: none;
   position: fixed;
@@ -344,7 +343,6 @@ main {
 .film-modal-info.hide {
   opacity: 0;
 }
-/* ? MODAL */
 
 .film-description {
   user-select: none;
@@ -464,7 +462,6 @@ main {
   grid-column: span 2;
 }
 
-/* ! ACTOR */
 .actors-head {
   font-family: var(--Font_Roboto);
   font-size: 26px;
@@ -517,9 +514,6 @@ main {
   color: #fff;
 }
 
-/* ! ACTOR */
-
-/* ! COMMENTS */
 #comments {
   font-family: var(--Font_Raleway);
 }
@@ -685,7 +679,6 @@ main {
   line-height: 24px;
 }
 
-/*? Smilar Movies  */
 #smilar-movies {
   font-family: var(--Font_Raleway);
   user-select: none;
@@ -801,8 +794,6 @@ main {
   color: #fff;
 }
 
-/*? Smilar Movies  */
-
 .film-actors .actors-slider .actor-slides .actor img {
   width: 130px;
   height: 150px;
@@ -811,15 +802,141 @@ main {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
-/* ------------------------------------------------------------------  */
-
 .movies-slider .movie {
-  pointer-events: auto; /* Kartların tıklanabilir olduğundan emin olun */
-  cursor: pointer; /* Tıklanabilirlik için cursor pointer */
+  pointer-events: auto;
+  cursor: pointer;
 }
 
 .movies-slider .movie img,
 .movies-slider .movie-desc,
 .movies-slider .movie-overlay {
-  pointer-events: none; /* Kartın içindeki elemanlar tıklama olayını maskelemesin */
+  pointer-events: none;
+}
+
+.modal-content-2 {
+  background-color: #171616;
+  padding: 40px;
+  border-radius: 12px;
+  width: 450px;
+  max-width: 90%;
+  text-align: center;
+  position: relative;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.comment-wrapper2 {
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #ffffff;
+  line-height: 1.5;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.modal-btn {
+  padding: 10px 40px;
+  border: none;
+  border-radius: 8px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#yes-btn {
+  background-color: #9b51e0;
+  color: #fff;
+}
+
+#yes-btn:hover {
+  background-color: #7a3bb5;
+}
+
+#no-btn {
+  background-color: #7a7a7a;
+  color: #fff;
+}
+
+#no-btn:hover {
+  background-color: #5a5a5a;
+}
+
+.modal-remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+}
+
+@keyframes popupFadeIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.popup {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  gap: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 200px;
+  background-color: #1e1e1e;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.popup.show {
+  display: flex;
+  animation: popupFadeIn 0.9s ease forwards;
+}
+
+.popup p {
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.close-btn {
+  width: 80px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #a64ef7;
+  color: white;
+}
+
+.close-btn:hover {
+  opacity: 0.9;
 }
